MAYBE I have finally fully automated the complete testing

--- a/setup_python_package/builders/models/readme
+++ b/setup_python_package/builders/models/readme
@@ -3,7 +3,7 @@
 |travis| |sonar_quality| |sonar_maintainability| |codacy|
 |code_climate_maintainability| |pip| |downloads|
 
-{description}
+{short_description}
 
 How do I install this package?
 ----------------------------------------------
